--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div style="display: flex;
     padding: 5px;">
             <div>
-                <img src="./Image/index2.jpg" alt="renwu" style="display: flex;
+                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index2.jpg" alt="renwu" style="display: flex;
         width: 560px;
         margin: 15px;">
             </div>
@@ -180,7 +180,7 @@ padding: 5px;">
                 </span>
             </div>
             <div>
-                <img src="./Image/index3.jpg" alt="renwu" style="display: flex;
+                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index3.jpg" alt="renwu" style="display: flex;
     width: 560px;
     margin: 15px;">
             </div>
@@ -193,7 +193,7 @@ padding: 5px;">
         <div style="display: flex;
     padding: 5px;">
             <div>
-                <img src="./Image/index4.jpg" alt="renwu" style="display: flex;
+                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index4.jpg" alt="renwu" style="display: flex;
             width: 560px;
             margin: 15px;">
             </div>
@@ -226,7 +226,7 @@ padding: 5px;">
                 </span>
             </div>
             <div>
-                <img src="./Image/index5.jpg" alt="renwu" style="display: flex;
+                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index5.jpg" alt="renwu" style="display: flex;
             width: 560px;
             margin: 15px;">
             </div>
