--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ padding: 5px;">
         <div style="display: flex;
     padding: 5px;">
             <div>
-                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index4.jpg" alt="renwu" style="display: flex;
+                <img src="./Image/index1" alt="renwu" style="display: flex;
             width: 560px;
             margin: 15px;">
             </div>
