--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </span>
             </div>
             <div>
-                <img src="./Image/index1" alt="jiemian" style="display: flex;
+                <img src="./Image/index1.jpg" alt="jiemian" style="display: flex;
                     width: 560px;
                     margin: 15px;">
             </div>
