--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div style="display: flex;
     padding: 5px;">
             <div>
-                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index2.jpg" alt="renwu" style="display: flex;
+                <img src="./Image/index2.jpg" alt="renwu" style="display: flex;
         width: 560px;
         margin: 15px;">
             </div>
