--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ padding: 5px;">
                 </span>
             </div>
             <div>
-                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index3.jpg" alt="renwu" style="display: flex;
+                <img src="./Image/index3.jpg" alt="renwu" style="display: flex;
     width: 560px;
     margin: 15px;">
             </div>
@@ -193,7 +193,7 @@ padding: 5px;">
         <div style="display: flex;
     padding: 5px;">
             <div>
-                <img src="./Image/index1" alt="renwu" style="display: flex;
+                <img src="./Inage/index4" alt="zaoyuzhan" style="display: flex;
             width: 560px;
             margin: 15px;">
             </div>
@@ -226,14 +226,14 @@ padding: 5px;">
                 </span>
             </div>
             <div>
-                <img src="https://github.com/HJZZY/hjzzy.github.io/blob/main/index5.jpg" alt="renwu" style="display: flex;
+                <img src="./Image/index5.jpg" alt="lianji" style="display: flex;
             width: 560px;
             margin: 15px;">
             </div>
         </div>
     </div>
     <div>
-        <a href="">关于我们</a>
+        <a href="https://space.bilibili.com/471856024?spm_id_from=333.337.0.0">关于我们</a>
     </div>
     <div style="margin: 5px;">
         <span style="color: whitesmoke;">
