--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ padding: 5px;">
         <div style="display: flex;
     padding: 5px;">
             <div>
-                <img src="./Inage/index4" alt="zaoyuzhan" style="display: flex;
+                <img src="./Inage/index4.jpg" alt="zaoyuzhan" style="display: flex;
             width: 560px;
             margin: 15px;">
             </div>
