--- a/yunpan.html
+++ b/yunpan.html
@@ -102,11 +102,11 @@
         </h2>
         <table border="1">
                 <tbody><tr>
-                    <td><img src="Img/NetWork Drive/panbaidu.jpg" width="100" height="100"></td>
-                    <td><img src="Img/NetWork Drive/panbaidu.jpg" width="100" height="100"></td>
-                    <td><img src="Img/NetWork Drive/aliyundrive.png" width="100" height="100"></td>
-                    <td><img src="Img/NetWork Drive/123pan.png" width="100" height="100"></td>
-                    <td><img src="Img/NetWork Drive/123pan.png" width="100" height="100"></td>
+                    <td><img src="./Image/panbaidu.jpg" width="100" height="100"></td>
+                    <td><img src="./Image/panbaidu.jpg" width="100" height="100"></td>
+                    <td><img src="./Image/aliyundrive.png" width="100" height="100"></td>
+                    <td><img src="./Image/123pan.png" width="100" height="100"></td>
+                    <td><img src="./Image/123pan.png" width="100" height="100"></td>
                     <td><img src="Img/NetWork Drive/xiaomuxi.jpg" width="100" height="100"></td>
                     <td><img src="Img/NetWork Drive/huang1111.jpg" width="100" height="100"></td>
                 </tr>
