--- a/yunpan.html
+++ b/yunpan.html
@@ -107,8 +107,8 @@
                     <td><img src="./Image/aliyundrive.png" width="100" height="100"></td>
                     <td><img src="./Image/123pan.png" width="100" height="100"></td>
                     <td><img src="./Image/123pan.png" width="100" height="100"></td>
-                    <td><img src="Img/NetWork Drive/xiaomuxi.jpg" width="100" height="100"></td>
-                    <td><img src="Img/NetWork Drive/huang1111.jpg" width="100" height="100"></td>
+                    <td><img src="./xiaomuxi.jpg" width="100" height="100"></td>
+                    <td><img src="./huang1111.jpg" width="100" height="100"></td>
                 </tr>
                 <tr>
                     <td>百度网盘一</td>
