--- a/yunpan.html
+++ b/yunpan.html
@@ -127,17 +127,17 @@
                 </tr>
                 <tr>
                     <td><a href="https://pan.baidu.com/s/16D5eCl32NKQrEchfTcdS9g" target="_blank" rel="noopener noreferrer"
-                            color:"white;">Download</a></td>
+                            style=" color:white;">Download</a></td>
                     <td><a href="https://www.aliyundrive.com/s/nxviRqM87VV" target="_blank" rel="noopener noreferrer"
-                            color:"white;">Download</a></td>
+                            style=" color:white;">Download</a></td>
                     <td><a href="https://www.123pan.com/s/AyUbVv-Wlpr.html" target="_blank" rel="noopener noreferrer"
-                            color:"white;">Download</a></td>
+                            style=" color:white;">Download</a></td>
                     <td><a href="https://www.123pan.com/s/KyvrVv-ykfuh.html" target="_blank" rel="noopener noreferrer"
-                            color:"white;">Download</a></td>
+                            style=" color:white;">Download</a></td>
                     <td><a href="https://pan.xiaomuxi.cn/s/ybuA" target="_blank" rel="noopener noreferrer"
-                            color:"white;">Download</a></td>
+                            style=" color:white;">Download</a></td>
                     <td><a href="https://pan.huang1111.cn/s/m8dlC1" target="_blank" rel="noopener noreferrer"
-                            color:"white;">Download</a></td>
+                            style=" color:white;">Download</a></td>
                 </tr>
             </tbody></table>
 </body>
