--- a/yunpan.html
+++ b/yunpan.html
@@ -34,6 +34,12 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        .color1{
+            color: red;
+        }
+        .color2{
+            color: yellow;
+        }
     </style>
 </head>
 
@@ -100,8 +106,9 @@
         <h2 style="color: whitesmoke;">
             红色警戒 重聚 2023 云盘下载
         </h2>
-        <table border="1">
-                <tbody><tr>
+        <table style="border: 1px;">
+            <tbody>
+                <tr>
                     <td><img src="./Image/panbaidu.jpg" width="100" height="100"></td>
                     <td><img src="./Image/aliyundrive.png" width="100" height="100"></td>
                     <td><img src="./Image/123pan.png" width="100" height="100"></td>
@@ -110,24 +117,24 @@
                     <td><img src="./huang1111.jpg" width="100" height="100"></td>
                 </tr>
                 <tr>
-                    <td>百度网盘一</td>
-                    <td>阿里云盘</td>
-                    <td>123云盘一</td>
-                    <td>123云盘二</td>
-                    <td>慕希云盘</td>
-                    <td>huang1111云盘</td>
+                    <td class="color1">百度网盘一</td>
+                    <td class="color1">阿里云盘</td>
+                    <td class="color1">123云盘一</td>
+                    <td class="color1">123云盘二</td>
+                    <td class="color1">慕希云盘</td>
+                    <td class="color1">huang1111云盘</td>
                 </tr>
                 <tr>
-                    <td>提取码:HJ22</td>
-                    <td>无需提取码</td>
-                    <td>提取码:iyxy</td>
-                    <td>提取码:T4iN</td>
-                    <td>提取码:ru23</td>
-                    <td>提取码:ru23</td>
+                    <td class="color2">提取码:HJ22</td>
+                    <td class="color2">无需提取码</td>
+                    <td class="color2">提取码:iyxy</td>
+                    <td class="color2">提取码:T4iN</td>
+                    <td class="color2">提取码:ru23</td>
+                    <td class="color2">提取码:ru23</td>
                 </tr>
                 <tr>
-                    <td><a href="https://pan.baidu.com/s/16D5eCl32NKQrEchfTcdS9g" target="_blank" rel="noopener noreferrer"
-                            style=" color:white;">Download</a></td>
+                    <td><a href="https://pan.baidu.com/s/16D5eCl32NKQrEchfTcdS9g" target="_blank"
+                            rel="noopener noreferrer" style=" color:white;">Download</a></td>
                     <td><a href="https://www.aliyundrive.com/s/nxviRqM87VV" target="_blank" rel="noopener noreferrer"
                             style=" color:white;">Download</a></td>
                     <td><a href="https://www.123pan.com/s/AyUbVv-Wlpr.html" target="_blank" rel="noopener noreferrer"
@@ -139,7 +146,9 @@
                     <td><a href="https://pan.huang1111.cn/s/m8dlC1" target="_blank" rel="noopener noreferrer"
                             style=" color:white;">Download</a></td>
                 </tr>
-            </tbody></table>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
