--- a/QQ2.html
+++ b/QQ2.html
@@ -35,6 +35,7 @@
             display: block;
         }
     </style>
+    <link rel="shurtcut icon" href="./clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
