--- a/yunpan.html
+++ b/yunpan.html
@@ -41,6 +41,7 @@
             color: yellow;
         }
     </style>
+    <link rel="shurtcut icon" href="./clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
