--- a/rizhi.html
+++ b/rizhi.html
@@ -101,6 +101,41 @@
     </div>
     <div>
         <span class="fontcolor">
+            ——————————————————————1.4.12——————————————————————<br>
+            1.加入自动更新和组件下载功能，可以在组件中下载扩展内容。<br>
+            2.文件结构优化，更加精简美观。<br>
+            3.Mod选择器和AI选择器载入机制重写，兼容原版Mod，并且现在玩家不需要写配置项也能增加mod了。<br>
+            4.AI接管控制不再预置快捷键，因为联机时使用此功能会导致崩溃。<br>
+            5.客户端增加了快捷键，回车键为确认，ESC键为取消。<br>
+            6.客户端现在能够检测第三方任务或mod（包括原版和尤复）并将其添加进游戏中而不影响已有任务和mod。<br>
+            7.支持动态载入图(mp4)。<br>
+            8.现在玩家版本不一致时无法联机。<br>
+            9.联机房间现在可以解除密码。<br>
+            10.皮肤文件会自动打包成mix。<br>
+            11.修复了游戏存档可能存在的bug。<br>
+            12.游戏颜色还原为原版颜色。<br>
+            13.phobos更换为正式版。（右上角不会再有红色提示）<br>
+            14.修复了多人图有时无法识别游戏模式的bug。<br>
+            15.地图编辑器升级为1.6.1版本。<br>
+            16.修复了在显示器缩放比例不为100%可能导致的异常问题。<br>
+            17.修复有些官方战役无法正常游玩的问题。<br>
+            18.新增游戏选项【限造解除】，开启后能够解除部分限造一个的设定。<br>
+            19.新增游戏选项【AI超武限制】，开启后AI不会建造超武。<br>
+            20.优化游戏选项【超级武器】，现在可以只开启小超武。<br>
+            21.修复了一些汉化错误。<br>
+            22.修复某些搜狗输入法会导致客户端崩溃的问题。<br>
+            23.联机新增了一个专属的服务器，优化服务器自动选择，默认选择此服务器。<br>
+            24.现在每张地图都会显示作者。<br>
+            25.现在第三方地图将使用地图文件名来作为地图名称。<br>
+            ——————————————————————1.4.11——————————————————————<br>
+            1.修复bug。<br>
+            ——————————————————————1.4.10——————————————————————<br>
+            1.新增游戏选项限造解除，勾选后能够解除比如超武，复制中心，谭雅等只能造一个的限制。<br>
+            2.新增游戏选项AI超武限制，勾选后AI不会建造超武。<br>
+            3.游戏选项禁用超级武器优化。<br>
+            4.修复马王神AI。<br>
+            5.界面布局微调。<br>
+            6.组件优化。<br>
             ——————————————————————1.4.9——————————————————————<br>
             1.修复64位不能用动态载入图。<br>
             2.修复某些搜狗输入法会导致客户端崩溃。<br>
