--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="zh-cn">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>红色警戒 重聚 2023游戏下载</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>红色警戒 重聚 2023 QQ群</title>
     <style>
         ul {
             list-style-type: none;
@@ -47,7 +47,7 @@
             <ul style="display: flex">
                 <li class="dhlbk">
                     <a href="./index.html">
-                        <div style="height: 22px;">
+                        <div class="dropdown">
                             <p>
                                 首页
                             </p>
@@ -60,8 +60,6 @@
                             <p>
                                 下载
                             </p>
-                            <div style="background-color: yellow;
-                            height: 3px;"></div>
                             <div class="dropdown-content" style="background-color:  rgba(56, 53, 53, 0.774);;">
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
                                     基础版下载
@@ -93,12 +91,14 @@
                 </li>
                 <li class="dhlbk">
                     <a href="./contact.html">
-                        <div style="height: 22px;">
+                        <div class="dropdown">
                             <p>
                                 QQ群
                             </p>
                         </div>
                     </a>
+                    <div style="background-color: yellow;
+                    height: 3px;"></div>
                 </li>
             </ul>
         </div>
@@ -106,72 +106,25 @@
     <div style="display: flex;
     flex-direction: column;
     align-items: center;">
-        <h2 style="color:whitesmoke">
-            红色警戒 重聚 2023游戏下载
+        <h2 style="color: white;">
+            红色警戒 重聚 2023 QQ群
         </h2>
-    </div>
-    <div style="display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;">
-        <ul style="display: flex;">
-            <li class="dhlbk">
-                <div style="background-color: rgb(8, 73, 252);
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
-                        <p style="color: yellow;">
-                            基础版下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(0, 128, 122);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://ru2023.sasw.top/download.html">
-                        <p style="color: yellow;">
-                            扩展版下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(90, 128, 0);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                        <p style="color: yellow;">
-                            1.4.12升级1.4.13<br>更新包下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(219, 44, 14);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="./network.html">
-                        <p style="color: yellow;">
-                            网盘下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-        </ul>
+        <p style="color: white;">
+            <b>
+                一群：
+            </b>
+            363035291
+            <br>
+            <b>
+                二群：
+            </b>
+            561178527
+            <br>
+            <b>
+                三群：
+            </b>
+            398677201
+        </p>
     </div>
 </body>
 
