--- a/index.html
+++ b/index.html
@@ -67,11 +67,19 @@
                                 下载
                             </p>
                             <div class="dropdown-content" style="background-color:  rgba(56, 53, 53, 0.774);;">
-                                <a style="color: white;" href="./youxi/【完全版】红色警戒2 重聚2023 1.3.3.exe">
-                                    最新游戏下载
+                                <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
+                                    基础版下载
                                 </a>
                                 <br>
-                                <a style="color: white;" href="./yunpan.html">
+                                <a style="color: white;" href="https://ru2023.sasw.top/download.html">
+                                    扩展版下载
+                                </a>
+                                <br>
+                                <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
+                                    1.4.12升级1.4.13更新包下载
+                                </a>
+                                <br>
+                                <a style="color: white;" href="./network.html">
                                     云盘下载
                                 </a>
                             </div>
@@ -79,7 +87,7 @@
                     </a>
                 </li>
                 <li class="dhlbk">
-                    <a href="./rizhi.html">
+                    <a href="./uplog.html">
                         <div>
                             <p>
                                 更新日志
@@ -88,7 +96,7 @@
                     </a>
                 </li>
                 <li class="dhlbk">
-                    <a href="./QQ2.html">
+                    <a href="./contact.html">
                         <div style="height: 22px;">
                             <p>
                                 QQ群
@@ -109,8 +117,9 @@
     <div style="display: flex;
     flex-direction: column;
     align-items: center;">
-        <div style="background-color: blue;
-    width: 70px;">
+        <div style="background-color: blueviolet;
+    width: 70px;"
+        align="center">
             <a href="./download.html">
                 <p style="color: yellow;">
                     前往下载
