--- a/network.html
+++ b/network.html
@@ -2,10 +2,10 @@
 <html lang="zh-cn">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>红色警戒 重聚 2023游戏下载</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>红色警戒 重聚 2023 网盘下载</title>
     <style>
         ul {
             list-style-type: none;
@@ -33,6 +33,12 @@
 
         .dropdown:hover .dropdown-content {
             display: block;
+        }
+        .color1{
+            color: red;
+        }
+        .color2{
+            color: yellow;
         }
     </style>
     <link rel="shurtcut icon" href="./clienticon.ico">
@@ -106,72 +112,56 @@
     <div style="display: flex;
     flex-direction: column;
     align-items: center;">
-        <h2 style="color:whitesmoke">
-            红色警戒 重聚 2023游戏下载
+        <h2 style="color: whitesmoke;">
+            红色警戒 重聚 2023 云盘下载
         </h2>
-    </div>
-    <div style="display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;">
-        <ul style="display: flex;">
-            <li class="dhlbk">
-                <div style="background-color: rgb(8, 73, 252);
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
-                        <p style="color: yellow;">
-                            基础版下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(0, 128, 122);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://ru2023.sasw.top/download.html">
-                        <p style="color: yellow;">
-                            扩展版下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(90, 128, 0);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                        <p style="color: yellow;">
-                            1.4.12升级1.4.13<br>更新包下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(219, 44, 14);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="./network.html">
-                        <p style="color: yellow;">
-                            网盘下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-        </ul>
+        <table style="border: 1px;">
+            <tbody>
+                <tr>
+                    <td><img src="./Image/panbaidu.jpg" width="100" height="100"></td>
+                    <td><img src="./Image/panbaidu.jpg" width="100" height="100"></td>
+                    <td><img src="./Image/aliyundrive.png" width="100" height="100"></td>
+                    <td><img src="./Image/123pan.png" width="100" height="100"></td>
+                    <td><img src="./Image/123pan.png" width="100" height="100"></td>
+                    <td><img src="./xiaomuxi.jpg" width="100" height="100"></td>
+                    <td><img src="./huang1111.jpg" width="100" height="100"></td>
+                </tr>
+                <tr>
+                    <td class="color1">百度网盘一</td>
+                    <td class="color1">百度网盘二</td>
+                    <td class="color1">阿里云盘</td>
+                    <td class="color1">123云盘一</td>
+                    <td class="color1">123云盘二</td>
+                    <td class="color1">慕希云盘</td>
+                    <td class="color1">huang1111云盘</td>
+                </tr>
+                <tr>
+                    <td class="color2">提取码:HJ22</td>
+                    <td class="color2">提取码:lnpk</td>
+                    <td class="color2">无需提取码</td>
+                    <td class="color2">提取码:iyxy</td>
+                    <td class="color2">提取码:T4iN</td>
+                    <td class="color2">提取码:ru23</td>
+                    <td class="color2">提取码:ru23</td>
+                </tr>
+                <tr>
+                    <td><a href="https://pan.baidu.com/s/16D5eCl32NKQrEchfTcdS9g" target="_blank"
+                            rel="noopener noreferrer" style=" color:white;">Download</a></td>
+                    <td><a href="https://pan.baidu.com/share/init?surl=wjK7cgVksX4md9TFJaeq5w" target="_blank"
+                            rel="noopener noreferrer" style=" color:white;">Download</a></td>
+                    <td><a href="https://www.aliyundrive.com/s/nxviRqM87VV" target="_blank" rel="noopener noreferrer"
+                            style=" color:white;">Download</a></td>
+                    <td><a href="https://www.123pan.com/s/AyUbVv-Wlpr.html" target="_blank" rel="noopener noreferrer"
+                            style=" color:white;">Download</a></td>
+                    <td><a href="https://www.123pan.com/s/KyvrVv-ykfuh.html" target="_blank" rel="noopener noreferrer"
+                            style=" color:white;">Download</a></td>
+                    <td><a href="https://pan.xiaomuxi.cn/s/ybuA" target="_blank" rel="noopener noreferrer"
+                            style=" color:white;">Download</a></td>
+                    <td><a href="https://pan.huang1111.cn/s/m8dlC1" target="_blank" rel="noopener noreferrer"
+                            style=" color:white;">Download</a></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 
