--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>红色警戒 重聚 2023游戏下载</title>
+    <title>下载</title>
     <style>
         ul {
             list-style-type: none;
@@ -72,7 +72,7 @@
                                 </a>
                                 <br>
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                    1.4.12升级1.4.13更新包下载
+                                    1.4.13更新包下载
                                 </a>
                                 <br>
                                 <a style="color: white;" href="./network.html">
@@ -95,7 +95,7 @@
                     <a href="./contact.html">
                         <div style="height: 22px;">
                             <p>
-                                QQ群
+                                联系我们
                             </p>
                         </div>
                     </a>
