--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>红色警戒 重聚 2023官网首页</title>
+    <title>红色警戒2重聚2023 官网首页</title>
     <style>
         ul {
             list-style-type: none;
@@ -99,7 +99,7 @@
                     <a href="./contact.html">
                         <div style="height: 22px;">
                             <p>
-                                QQ群
+                                联系我们
                             </p>
                         </div>
                     </a>
