--- a/network.html
+++ b/network.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>红色警戒 重聚 2023 网盘下载</title>
+    <title>云盘下载</title>
     <style>
         ul {
             list-style-type: none;
@@ -101,7 +101,7 @@
                     <a href="./contact.html">
                         <div style="height: 22px;">
                             <p>
-                                QQ群
+                                联系我们
                             </p>
                         </div>
                     </a>
