--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             display: block;
         }
     </style>
-    <link rel="shurtcut icon" href="./clienticon.ico">
+    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -70,7 +70,7 @@
                                 </a>
                                 <br>
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                    1.4.12升级1.4.13更新包下载
+                                    更新包下载
                                 </a>
                                 <br>
                                 <a style="color: white;" href="./network.html">
@@ -107,49 +107,54 @@
     flex-direction: column;
     align-items: center;">
         <h2 style="color: white;">
-            红色警戒 重聚 2023 QQ群
+            红色警戒2重聚2023
         </h2>
         <p style="color: white;">
                         <h2>
-                <p style="font-family: 楷体;font-size: x-large;">QQ交流群</p>
+                <p style="color: white;">QQ交流群</p>
             </h2>
             <h3>
-            <h3>君悦的作战实验室:363035291 (1000人);
+            <h3 style="color: white;">君悦的作战实验室:363035291 (1000人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BAq65NRwHzdG5ftzGhiSaIQ6VyPM_4Fw&authKey=JCyVJT3uAbjI7TLZmmVEj7%2BtWj56Loci4JkyH%2F37%2BpqYLI69Pad0mjHHmQbjPsIo&noverify=0&group_code=363035291" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-            <h3>君悦的建造场:561178527 (2000人);
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BAq65NRwHzdG5ftzGhiSaIQ6VyPM_4Fw&authKey=JCyVJT3uAbjI7TLZmmVEj7%2BtWj56Loci4JkyH%2F37%2BpqYLI69Pad0mjHHmQbjPsIo&noverify=0&group_code=363035291" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h3 style="color: white;">君悦的建造场:561178527 (2000人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=foooHhDOx4bs-qAy4LZZLNIxSGFb3dWY&authKey=QXYD4JNkma72pGFtjPAzUF5DI1jnVycVp1c%2FRrvRT2nILxXbUmBwClec2ZokE6UG&noverify=0&group_code=561178527" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-            <h3>君悦的空指部:398677201 (1000人);
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=foooHhDOx4bs-qAy4LZZLNIxSGFb3dWY&authKey=QXYD4JNkma72pGFtjPAzUF5DI1jnVycVp1c%2FRrvRT2nILxXbUmBwClec2ZokE6UG&noverify=0&group_code=561178527" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h3 style="color: white;">君悦的空指部:398677201 (1000人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=q5m8KkKNtcnYXrcLmh8EVsYeF81z5arB&authKey=s4tJ2DGGfTjw6%2BPGmEptldRYVe7BR7jBFR3rkE75Bk3tjUa1V50vrUJPCUeakigV&noverify=0&group_code=398677201" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-          <h3>君悦的战车工厂:877478233 (1000人);
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=q5m8KkKNtcnYXrcLmh8EVsYeF81z5arB&authKey=s4tJ2DGGfTjw6%2BPGmEptldRYVe7BR7jBFR3rkE75Bk3tjUa1V50vrUJPCUeakigV&noverify=0&group_code=398677201" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+          <h3 style="color: white;">君悦的战车工厂:877478233 (1000人);
           </h3>
-          <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lelRgD9kZYDgXfFgzZTmS8y3XWDVFRsE&authKey=nX0Tdh5rpdWZkBOaj6CXevnCvRem2o5vQd1oo0BTqDHhGH7hMHFvvtTXUAwSCwAk&noverify=0&group_code=877478233" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-            <h3 class="color3">将军同志的作战实验室！:491826892 (500人);
+          <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lelRgD9kZYDgXfFgzZTmS8y3XWDVFRsE&authKey=nX0Tdh5rpdWZkBOaj6CXevnCvRem2o5vQd1oo0BTqDHhGH7hMHFvvtTXUAwSCwAk&noverify=0&group_code=877478233" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h3 style="color: white;">将军同志的作战实验室！:491826892 (500人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1TtgRE9TKQxO0r4iO7pv9ovGzskE4eSw&authKey=j6a1R%2Bm1CKKrkPPgOvCGVlaEHS6xBgFRzy%2B%2B7LpAanapxSec55D%2FgKPad5%2FxDA6%2F&noverify=0&group_code=491826892" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-            <h3>将军同志的建造场！:331643433 (200人);
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1TtgRE9TKQxO0r4iO7pv9ovGzskE4eSw&authKey=j6a1R%2Bm1CKKrkPPgOvCGVlaEHS6xBgFRzy%2B%2B7LpAanapxSec55D%2FgKPad5%2FxDA6%2F&noverify=0&group_code=491826892" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h3 style="color: white;">将军同志的建造场！:331643433 (200人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=kmz7zkBpm6y131G8WU45HJ4S9TYZtqP0&authKey=rXkoGL0OdYWlUBlH8s7%2BfYA4pjflDIi8k%2FYdFqZFowVEYJV1obIgXBOGzNDmwec8&noverify=0&group_code=331643433" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-            <h3>盟指的天气控制器！:863238365 (200人);
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=kmz7zkBpm6y131G8WU45HJ4S9TYZtqP0&authKey=rXkoGL0OdYWlUBlH8s7%2BfYA4pjflDIi8k%2FYdFqZFowVEYJV1obIgXBOGzNDmwec8&noverify=0&group_code=331643433" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h3 style="color: white;">盟指的天气控制器！:863238365 (200人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=s_YDjDYzaKqUbhorSOAhHg3KIMPWOvRC&authKey=8lUHTDhGR2ciFFOu8Vi5PRz%2BI9jN1SoIXVP0LLF3fLrC%2FKk%2F%2FBi0%2Biu1%2FZ%2BHbGtf&noverify=0&group_code=863238365" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
-            <h3>北极狐の小窝:585663503 (500人);
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=s_YDjDYzaKqUbhorSOAhHg3KIMPWOvRC&authKey=8lUHTDhGR2ciFFOu8Vi5PRz%2BI9jN1SoIXVP0LLF3fLrC%2FKk%2F%2FBi0%2Biu1%2FZ%2BHbGtf&noverify=0&group_code=863238365" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h3 style="color: white;">北极狐の小窝:585663503 (500人);
             </h3>
-            <h4>链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1crX18gIgI_Z8Bxx8ZtfyfluKRwRO-wE&authKey=4zsFfb%2BX4ncAzTWc5%2BaboCKovGNjTVx35HuDL1GtJ%2BSEol9OAcroThJ8mjLNwahp&noverify=0&group_code=585663503" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1crX18gIgI_Z8Bxx8ZtfyfluKRwRO-wE&authKey=4zsFfb%2BX4ncAzTWc5%2BaboCKovGNjTVx35HuDL1GtJ%2BSEol9OAcroThJ8mjLNwahp&noverify=0&group_code=585663503" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
             </h3>
             </div>
+            <br/>
+            <div style="display: flex;
+            flex-direction: column;
+            align-items: center;">
             <h2>
-                <p style="font-family: 楷体;font-size: x-large;">QQ频道</p>
+                <p style="color: white;">QQ频道</p>
             </h2>
             <h3>
-            <h3>红色警戒2重聚2023:iw89uc0x15 (未知);
+            <h3 style="color: white;">红色警戒2重聚2023:iw89uc0x15 (未知);
             </h3>
-            <h4>链接:<a href="https://pd.qq.com/s/a0pnslseu" target="_blank" rel="noopener noreferrer">点我加入QQ频道</a></h4>
+            <h4 style="color: white;">链接:<a href="https://pd.qq.com/s/a0pnslseu" target="_blank" rel="noopener noreferrer">点我加入QQ频道</a></h4>
             </h3>
         </p>
     </div>
+ </div>
 </body>
 
 </html>
