--- a/download.html
+++ b/download.html
@@ -35,7 +35,7 @@
             display: block;
         }
     </style>
-    <link rel="shurtcut icon" href="./clienticon.ico">
+    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -72,7 +72,7 @@
                                 </a>
                                 <br>
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                    1.4.13更新包下载
+                                    更新包下载
                                 </a>
                                 <br>
                                 <a style="color: white;" href="./network.html">
@@ -107,7 +107,7 @@
     flex-direction: column;
     align-items: center;">
         <h2 style="color:whitesmoke">
-            红色警戒 重聚 2023游戏下载
+            红色警戒2重聚2023 游戏下载
         </h2>
     </div>
     <div style="display: flex;
@@ -152,7 +152,7 @@
                 align-items: center;">
                     <a href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
                         <p style="color: yellow;">
-                            1.4.12升级1.4.13<br>更新包下载
+                            更新包下载
                         </p>
                     </a>
                 </div>
@@ -166,7 +166,7 @@
                 align-items: center;">
                     <a href="./network.html">
                         <p style="color: yellow;">
-                            网盘下载
+                            云盘下载
                         </p>
                     </a>
                 </div>
