--- a/network.html
+++ b/network.html
@@ -41,7 +41,7 @@
             color: yellow;
         }
     </style>
-    <link rel="shurtcut icon" href="./clienticon.ico">
+    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -78,7 +78,7 @@
                                 </a>
                                 <br>
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                    1.4.12升级1.4.13更新包下载
+                                    更新包下载
                                 </a>
                                 <br>
                                 <a style="color: white;" href="./network.html">
@@ -113,7 +113,7 @@
     flex-direction: column;
     align-items: center;">
         <h2 style="color: whitesmoke;">
-            红色警戒 重聚 2023 云盘下载
+            红色警戒2重聚2023 云盘下载
         </h2>
         <table style="border: 1px;">
             <tbody>
@@ -123,8 +123,8 @@
                     <td><img src="./Image/aliyundrive.png" width="100" height="100"></td>
                     <td><img src="./Image/123pan.png" width="100" height="100"></td>
                     <td><img src="./Image/123pan.png" width="100" height="100"></td>
-                    <td><img src="./xiaomuxi.jpg" width="100" height="100"></td>
-                    <td><img src="./huang1111.jpg" width="100" height="100"></td>
+                    <td><img src="./Image/xiaomuxi.jpg" width="100" height="100"></td>
+                    <td><img src="./Image/huang1111.jpg" width="100" height="100"></td>
                 </tr>
                 <tr>
                     <td class="color1">百度网盘一</td>
