--- a/uplog.html
+++ b/uplog.html
@@ -39,7 +39,7 @@
             display: block;
         }
     </style>
-    <link rel="shurtcut icon" href="./clienticon.ico">
+    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -74,7 +74,7 @@
                                 </a>
                                 <br>
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                    1.4.12升级1.4.13更新包下载
+                                    更新包下载
                                 </a>
                                 <br>
                                 <a style="color: white;" href="./network.html">
@@ -107,7 +107,12 @@
             </ul>
         </div>
     </div>
-    <div>
+    <div style="display: flex;
+    flex-direction: column;
+    align-items: center;">
+        <h2 style="color: whitesmoke;">
+            红色警戒2重聚2023 更新日志
+        </h2>
         <span class="fontcolor">
             ——————————————————————1.4.13——————————————————————<br>
             1.修复了断网打不开客户端的问题。<br>
