--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             display: block;
         }
     </style>
-    <link rel="shurtcut icon" href="./clienticon.ico">
+    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -76,7 +76,7 @@
                                 </a>
                                 <br>
                                 <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                    1.4.12升级1.4.13更新包下载
+                                    更新包下载
                                 </a>
                                 <br>
                                 <a style="color: white;" href="./network.html">
@@ -111,7 +111,7 @@
     flex-direction: column;
     align-items: center;">
         <h2 style="color:whitesmoke">
-            红色警戒 重聚 2023官网
+            红色警戒2重聚2023 官网首页
         </h2>
     </div>
     <div style="display: flex;
