--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
             <h3>
             <h3 style="color: white;">君悦的作战实验室:363035291 (1000人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BAq65NRwHzdG5ftzGhiSaIQ6VyPM_4Fw&authKey=JCyVJT3uAbjI7TLZmmVEj7%2BtWj56Loci4JkyH%2F37%2BpqYLI69Pad0mjHHmQbjPsIo&noverify=0&group_code=363035291" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BAq65NRwHzdG5ftzGhiSaIQ6VyPM_4Fw&authKey=JCyVJT3uAbjI7TLZmmVEj7%2BtWj56Loci4JkyH%2F37%2BpqYLI69Pad0mjHHmQbjPsIo&noverify=0&group_code=363035291" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
             <h3 style="color: white;">君悦的建造场:561178527 (2000人);
             </h3>
             <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=foooHhDOx4bs-qAy4LZZLNIxSGFb3dWY&authKey=QXYD4JNkma72pGFtjPAzUF5DI1jnVycVp1c%2FRrvRT2nILxXbUmBwClec2ZokE6UG&noverify=0&group_code=561178527" target="_blank" rel="noopener noreferrer">点我加群</a></h4>
