--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系我们</title>
+    <title>红色警戒 重聚 2023 分官网-联系我们</title>
     <style>
         ul {
             list-style-type: none;
