--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                                 下载
                             </p>
                             <div class="dropdown-content" style="background-color:  rgba(56, 53, 53, 0.774);;">
-                                <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
+                                <a style="color: white;"
+                                    href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
                                     基础版下载
                                 </a>
                                 <br>
@@ -75,7 +76,8 @@
                                     扩展版下载
                                 </a>
                                 <br>
-                                <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
+                                <a style="color: white;"
+                                    href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
                                     更新包下载
                                 </a>
                                 <br>
@@ -118,8 +120,7 @@
     flex-direction: column;
     align-items: center;">
         <div style="background-color: blueviolet;
-    width: 70px;"
-        align="center">
+    width: 70px;" align="center">
             <a href="./download.html">
                 <p style="color: yellow;">
                     前往下载
@@ -242,8 +243,16 @@ padding: 5px;">
             </div>
         </div>
     </div>
-    <div>
-        <a href="https://space.bilibili.com/471856024?spm_id_from=333.337.0.0">关于我们</a>
+    <div style="display: flex;
+    flex-direction: column;
+    align-items: center;">
+        <div style="display: flex;">
+            <div>
+                <a href="https://space.bilibili.com/471856024?spm_id_from=333.337.0.0" style="color: yellow;">
+                    哔哩哔哩
+                </a>
+            </div>
+        </div>
     </div>
     <div style="margin: 5px;">
         <span style="color: whitesmoke;">
@@ -254,21 +263,21 @@ padding: 5px;">
         Copyright © 2022-2023 红警指战员！
         <span id="span"></span>
         <script type="text/javascript">
-            function runtime(){
+            function runtime() {
                 // 初始时间，日/月/年 时:分:秒
                 X = new Date("07/03/2023 16:00:00");
                 Y = new Date();
-                T = (Y.getTime()-X.getTime());
-                M = 24*60*60*1000;
-                a = T/M;
+                T = (Y.getTime() - X.getTime());
+                M = 24 * 60 * 60 * 1000;
+                a = T / M;
                 A = Math.floor(a);
-                b = (a-A)*24;
+                b = (a - A) * 24;
                 B = Math.floor(b);
-                c = (b-B)*60;
-                C = Math.floor((b-B)*60);
-                D = Math.floor((c-C)*60);
+                c = (b - B) * 60;
+                C = Math.floor((b - B) * 60);
+                D = Math.floor((c - C) * 60);
                 //信息写入到DIV中
-                span.innerHTML = "本站已安全运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"
+                span.innerHTML = "本站已安全运行: " + A + "天" + B + "小时" + C + "分" + D + "秒"
             }
             setInterval(runtime, 1000);
         </script>
